Mon Jul 13 03:00:46 PDT 1998 Jay Cox  <jaycox@earthlink.net>

	* brush_select.c gimpbrushlist.c: fixed brush ref counting

Mon Jul 13 07:42:36 BST 1998 Adam D. Moss <adam@gimp.org>

	* app/convert.c: July 6th's patch from Yasuhiro SHIRASAKI for
	constraining custom-palette choices to <=256 colours broke
	the automatic defaulting of 'Web' palette.  Fixed.

Sun Jul 12 23:56:35 1998  Scott Goehring  <scott@poverty.bloomington.in.us>

	* app/tile_swap.c: #if 0'd some of mkj's last commit because it's
	busted.

Sun Jul 12 19:00:15 EDT 1998 Michael K. Johnson <johnsonm@redhat.com>

	* app/tile_swap.c
	* app/tile_swap.h
	* app/tile_manager.c
	* app/tile_manager.h
	* app/pixel_region.c
	* app/pixel_region.h: asynchronous swapin on systems with
	pthreads.  This version is not at all tuned, and the only
	interface which makes use of it now is
	pixel_region_{g,s}et_{row,col}.  Other functions which
	know ahead of time the area that they will be needing can
	request that it be asynchronously swapped in via the
	pixel_region_get_async() function.

Sun Jul 12 17:32:24 1998  Scott Goehring  <scott@poverty.bloomington.in.us>

	* app/tile_cache.c: Some optimizations and bugfixes relative to
 	the preswapper.

Sun Jul 12 15:56:01 BST 1998 Adam D. Moss <adam@gimp.org>

	* app/gdisplay.h
	* app/interface.c
	* app/plug_in.c: Added the ability to cancel a running
	plugin when the progress-bar has been sucked into the image
	window.

	* plug-ins/psd/psd.c: Turned debugging on again, since we
	are in a development cycle...

Sun Jul 12 04:16:17 PDT 1998 Jay Cox <jaycox@earthlink.net>
	* gimplist{.c,.h,F.h,P.h}
        New class for lists

	* gimpbrushlist.h gimpbrushlistF.h gimpbrushlistP.h brush_select.c
        split gimpbrushlist.h into 3 files.  Made gimplist
        the parent class of GimpBrushList.

	* gimpbrushlist.c: brushes in the list are once again sorted by name.

	* paint_funcs.c: minor speed tweak to a minor speed tweak in 
	border_region
